import { Repository } from 'typeorm'
import { Algorithm } from 'src/domain'

export class AlgorithmsRepository extends Repository<Algorithm> {}
